--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 # security.user.password=kedarjavalkar
+
+server.port=8080
+
+spring.datasource.platform=postgres
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo-spring-boot
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
