Updating Log format. Adding banner.txt
adding APIs
 - get by id
 - get by first name and last name
 - get all

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 
 server.port=8080
 
+logging.level.root=info
+logging.pattern.console=%-6level [%d{dd-MM-yyyy HH:mm:ss.SSS}] [%thread] %logger{36} - %M : %msg %n
+
 spring.datasource.platform=postgres
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo-spring-boot
