adding h2 db for quick run

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,38 @@
 # security.user.password=kedarjavalkar
 
+###
+##	Server
+###
 server.port=8080
 
+###
+##	Logger
+###
 logging.level.root=info
 logging.pattern.console=%-6level [%d{dd-MM-yyyy HH:mm:ss.SSS}] [%thread] %logger{36} - %M : %msg %n
 
-spring.datasource.platform=postgres
-spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo-spring-boot
-spring.datasource.username=postgres
-spring.datasource.password=root
+###
+#   Database Settings
+###
+spring.datasource.url=jdbc:h2:file:./demo-spring-boot;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.platform=h2
+spring.datasource.username = sa
+spring.datasource.password =
+spring.datasource.driverClassName = org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+###
+#   H2 Settings
+###
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+###
+#   Hibernate Settings
+###
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
